# buffer-benchmarks

go/: go.mod  go.sum
go/capnproto/: capnproto.go
go/flatbuffers/: flatbuffers.go
rust/: Cargo.toml  build.rs
rust/benches/: buffer_benchmarks.rs
rust/src/: capnproto.rs  flatbuffers.rs  lib.rs
rust/src/flatbuffers/: message_generated.rs
schemas/: message-rust.capnp
