[package]
name = "buffer-benchmarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flatbuffers = "25.2.10"
protobuf = "3.7.2"

[build-dependencies]
protobuf-codegen = "3.7.2"

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "buffer_benchmarks"
harness = false
